# rust-sha2ni

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build-and-test.yaml  lint.yaml  security.yaml
benches/: sha256.rs  sha512.rs
examples/: sha256sum.rs  sha512sum.rs
src/: aarch64.rs  consts.rs  lib.rs  platform.rs  sha256.rs  sha256_intrinsics.rs  sha256_utils.rs  sha512_utils.rs
tests/: lib.rs
