[package]
name = "sha2ni"
version = "0.8.5"
authors = ["RustCrypto Developers", "Friedel Ziegelmayer <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
description = "SHA-2 hash functions"
documentation = "https://docs.rs/sha2ni"
repository = "https://github.com/filecoin-project/rust-sha2ni"
keywords = ["crypto", "sha2", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.8"
block-buffer = "0.7"
fake-simd = "0.1"
opaque-debug = "0.2"
sha2-asm = { version="0.5", optional=true }
libc = { version = "0.2", optional = true }

[dependencies.lazy_static]
version = "1.4.0"
default-features = false
# no_std feature is an anti-pattern. Why, lazy_static, why?
# See https://github.com/rust-lang-nursery/lazy-static.rs/issues/150
features = ["spin_no_std"]

[dev-dependencies]
digest = { version = "0.8", features = ["dev"] }
hex-literal = "0.1"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "7.0.3"

[features]
default = ["std"]
std = ["digest/std"]
asm = ["sha2-asm"]

# TODO: Remove this feature once is_aarch64_feature_detected!() is stabilised.
# Only used on AArch64 Linux systems.
asm-aarch64 = ["asm", "libc"]


